--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/170/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/170/index.mdx
@@ -102,7 +102,7 @@ Start your free trial [today](https://apryse.com/form/contact-sales?utm_source=e
 - 👀 [ChatGPT React Native Buddy](https://chat.openai.com/g/g-S9qpp72cb-react-native-buddy)
 - 📅 [App.js Conf Call for Papers is ending January 28](https://appjs.co/#CFP)
 - 📜 [Unlocking New Possibilities with Maestro: Beyond Automated Testing](https://www.bam.tech/article/unlocking-new-possibilities-with-maestro-beyond-automated-testing): introduction sur la façon de faire des tests visuels automatiques des applications React Native en utilisant Maestro.
-- 📦 [Official Tamagui design system Figma released](https://www.figma.com/community/file/1326593766534421119/tamagui-v1-2-0): créer des dessins en utilisant les composants Tamagui dans Figma.
+- 📦 [Official Tamagui design system Figma released](https://www.figma.com/community/file/1326593766534421119/tamagui-v1-2-0): pour utiliser les composants Tamagui dans Figma.
 - 📦 [React Native Test App 3.0](https://github.com/microsoft/react-native-test-app/releases/tag/3.0.0): pplication de test de Microsoft pour les auteurs de librairies. Abandonne Node 14, React Native 0.65 et les versions antérieures, ainsi que Flipper.
 - 📦 [React Native visionOS with new CLI commands](https://github.com/callstack/react-native-visionos): VisionOS sera bientôt disponible et la communauté s'active pour que React Native soit prêt à accueillir cette nouvelle plateforme.
 - 📦 [vision-camera-resize-plugin - Frame Processor plugin for fast buffer resizing](https://github.com/mrousavy/vision-camera-resize-plugin)
