--- a/website/newsletter/171/index.mdx
+++ b/website/newsletter/171/index.mdx
@@ -50,7 +50,6 @@ Axiom efficiently captures 100% of your event data so you’ll never have to wor
 - 👀 [Nexar: application architecture for Next.js App Router apps](https://nexar.dev/): An opinionated set of patterns and conventions to build scalable Next.js apps, including a full open-source application.
 - 🐦 [React-Forget is written in TypeScript/Babel. It will eventually be rewritten in Rust later, or compiled to native with Static Hermes!](https://twitter.com/dan_abramov2/status/1747640983980806466) 🙉
 - 📜 [New client-side hooks coming to React 19](https://marmelab.com/blog/2024/01/23/react-19-new-hooks.html): Overview of new React hooks and APIs coming in the next major that you will be able to use without a framework.
-
 - 📜 [The Query Options API](https://tkdodo.eu/blog/the-query-options-api): Dominik explains the advantages of removing React-Query overloads in v5, and using a single unified options object that you can reuse across all React-Query APIs thanks to TypeScript duck typing. The usage of a fancy TypeScript DataTag technique greatly improves the DX 🙉.
 - 📜 [Panda v1 Roadmap](https://www.adebayosegun.com/blog/panda-v1-roadmap): the CSS-in-JS lib is progressing toward a v1 release. It has already optimized its runtime and integrated Lightning CSS. Remaining tasks include Panda Studio (to vizualize design tokens), opacity modifiers, container queries, config validation…
 - 📜 [Wrangling Tuple Types](https://kyleshevlin.com/wrangling-tuple-types/): Explains why you might want to use TypeScript “as const” while returning tuples from custom React hooks.
@@ -100,6 +99,22 @@ TWIR exclusive: [Get 25% off your FormBuilder SDK license](https://tripetto.com/
 ---
 
 ## 📱 React-Native {#react-native}
+
+This week’s React Native news compiled by Benedikt. Feedback, suggestions or news to share? Let me know on [Twitter](https://twitter.com/bndkt).
+
+[![Expo SDK 50](/emails/issues/171/expo50.jpg)](https://expo.dev/changelog/2024/01-18-sdk-50k)
+
+**[Expo SDK 50](https://expo.dev/changelog/2024/01-18-sdk-50)**
+
+Expo SDK 50 introduces Expo Dev Tools Plugins, comes with new SQLite and Camera APIs, and adds ‘@expo/fingerprint’, a new way to determine whether an updated JS bundle update is compatible with a given native build. This release also marks the [end of Webpack support](https://blog.expo.dev/webpack-support-in-expo-cli-is-now-deprecated-e9831d7eb631) in Expo, which is now deprecated in favor of Metro. The best and most convenient way to get up to speed on Expo 50 is probably to watch Simon rattle through it in about 15 minutes on [YouTube](https://www.youtube.com/watch?v=shaGaiwu4Fg).
+
+---
+
+[![Expo Router v3](/emails/issues/171/router3.jpg)](https://expo.dev/changelog/2024/01-23-router-3)
+
+**[Expo Router v3](https://expo.dev/changelog/2024/01-23-router-3)**
+
+Along with Expo SDK 50, Expo Router v3 has been released. It brings lots of performance and stability improvements and comes with better docs. Most notably, there is now experimental support for building universal server endpoints with API Routes.
 
 ---
 
