--- a/website/newsletter/171/index.mdx
+++ b/website/newsletter/171/index.mdx
@@ -70,9 +70,9 @@ Axiom efficiently captures 100% of your event data so you’ll never have to wor
 - 📦 [Astro 4.2 - Prerendering using Speculation Rules API, customizable image optimization](https://astro.build/blog/astro-420/)…
 - 📦 [vocs - Minimal Documentation Framework, powered by React + Vite](https://github.com/wevm/vocs)
 - 📦 [ReScript 11.0 - React lazy components](https://rescript-lang.org/blog/release-11-0-0)
-- 🎥 [Next.js App Router Caching: Explained!](https://www.youtube.com/watch?v=VBlSe8tvg4U)
-- 🎥 [Deploying Next.js to Vercel](https://www.youtube.com/watch?v=AiiGjB2AxqA)
-- 🎥 [React form validation explained - Next.js and Astro](https://www.youtube.com/watch?v=DwEkvie79xI)
+- 🎥 [Lee Robinson - Next.js App Router Caching: Explained!](https://www.youtube.com/watch?v=VBlSe8tvg4U)
+- 🎥 [Lee Robinson - Deploying Next.js to Vercel](https://www.youtube.com/watch?v=AiiGjB2AxqA)
+- 🎥 [Ben Holmes - React form validation explained - Next.js and Astro](https://www.youtube.com/watch?v=DwEkvie79xI)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -100,7 +100,7 @@ TWIR exclusive: [Get 25% off your FormBuilder SDK license](https://tripetto.com/
 
 ## 📱 React-Native {#react-native}
 
-This week’s React Native news compiled by Benedikt. Feedback, suggestions or news to share? Let me know on [Twitter](https://twitter.com/bndkt).
+This week’s React Native news are compiled by Benedikt. Feedback, suggestions or news to share? Let me know on [Twitter](https://twitter.com/bndkt).
 
 [![Expo SDK 50](/emails/issues/171/expo50.jpg)](https://expo.dev/changelog/2024/01-18-sdk-50k)
 
