--- a/website/newsletter/171/index.mdx
+++ b/website/newsletter/171/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /171
-title: "This Week In React #171: ..."
+title: "This Week In React #171: Expo, React Conf, React 19 features, Next.js, React-Email, Storybook, Panda, Nexar, React-Query, TypeScript, Vocs, Skottie, Harmony, VisionOS..."
 authors: [slorber]
 date: 01-24-2023
 unlisted: true
@@ -8,9 +8,7 @@ unlisted: true
 
 Hi everyone!
 
-Hey
-
-<Todo />
+This week we have
 
 <!-- truncate -->
 
@@ -63,7 +61,7 @@ A playground with a quite exhaustive list of interactive demos about Next.js fea
 - 📜 [Wrangling Tuple Types](https://kyleshevlin.com/wrangling-tuple-types/): Explains why you might want to use TypeScript “as const” while returning tuples from custom React hooks.
 - 📜 [Build a Next.js app in Storybook with React Server Components and Mock Service Worker](https://storybook.js.org/blog/build-a-nextjs-app-with-rsc-msw-storybook/): The RSC support coming with Storybook 8 permits to use it to develop a full Next.js app in isolation.
 - 📜 [Build an app with Remix and Bun](https://sergiodxa.com/tutorials/build-an-app-with-remix-and-bun): It’s possible to use Bun at runtime, but for now you have to keep building the Remix app with Node.
-- 📜 [Harmony - A new kind of color picker for React](https://polar.sh/emilwidlund/posts/a-new-kind-of-color-picker-with-react-typescript): Introduces a new interesting React color picker package, that matches multiple colors together according to harmonies.
+- 📜 [Harmony - A new kind of color picker for React](https://polar.sh/emilwidlund/posts/a-new-kind-of-color-picker-with-react-typescript): New fancy React color picker package, that matches multiple colors together according to harmonies.
 - 📜 [RSC is React Server + Component](https://bobaekang.com/blog/rsc-is-react-server-plus-component/): Gives you an interesting mental model to understand RSCs.
 - 📜 [From Next.js to Rails then Elixir: My journey through React.js burnout](https://dev.to/danielbergholz/from-nextjs-to-rails-then-elixir-my-journey-through-reactjs-burnout-h8d)
 - 📜 [Detailed React. Reconciliation, Renderers, Fiber, Virtual Tree](https://blog.frontend-almanac.com/JqtGelofzm1)
