--- a/website/newsletter/171/index.mdx
+++ b/website/newsletter/171/index.mdx
@@ -129,8 +129,8 @@ Along with Expo SDK 50, Expo Router v3 has been released. It brings lots of perf
 
 - 💸 [Moropo - Power Up Your Mobile UI Tests with support for 2FA, Google Play, Offline Mode and Tablets ](https://www.moropo.com?utm_source=newsletter&utm_medium=emails&utm_campaign=twir-20240124)
 - 🐦 [Blur VisionOS demo](https://twitter.com/o_kwasniewski/status/1747976103505821946): `@react-native-community/blur` now supports visionOS.
+- 📖 [Expo Docs: Use Bun](https://docs.expo.dev/guides/using-bun/): Bun is (rightfully) all the rage right now and it works great with Expo!
 - 📜 [Webpack support in Expo CLI is now deprecated](https://blog.expo.dev/webpack-support-in-expo-cli-is-now-deprecated-e9831d7eb631): Time to move to Metro, the universal bundler for React Native and Expo Web. There are also [docs for migrating](https://docs.expo.dev/router/migrate/from-expo-webpack/).
-- 📜 [Expo Docs: Use Bun](https://docs.expo.dev/guides/using-bun/): Bun is (rightfully) all the rage right now and it works great with Expo!
 - 📜 [Xcode 15.2 image is now available on EAS Build](https://expo.dev/changelog/2024/01-18-eas-build-xcode-15.2-image)
 - 📜 [React Native Video on visionOS](https://thewidlarzgroup.com/react-native-video-on-visionos/): react-native-video will be able to render video on Apple’s Vision Pro.
 - 📜 [Our React Native toolbox: 24 essential tools for developers in 2024](https://thewidlarzgroup.com/24-react-native-tools-for-2024/): Good overview of the tools landscape, from IDEs to debugging and tracing.
