--- a/website/newsletter/171/index.mdx
+++ b/website/newsletter/171/index.mdx
@@ -149,7 +149,7 @@ Along with Expo SDK 50, Expo Router v3 has been released. It brings lots of perf
 
 ## 🔀 Other {#other}
 
-- 👀 [RFC for Biome plugins](https://github.com/biomejs/biome/discussions/1649)
+- 👀 [Biome RFC - Plugins](https://github.com/biomejs/biome/discussions/1649)
 - 📜 [How Core Web Vitals affect SEO - field data vs lab data](https://vercel.com/blog/how-core-web-vitals-affect-seo)
 - 📜 [The Bun Shell - run cross-platform shell scripts in JavaScript & TypeScript](https://bun.sh/blog/the-bun-shell)
 - 📜 [The AHA Stack - Combine Astro, htmx and Alpine.js to create modern web applications](https://ahastack.dev/)
