--- a/website/newsletter/171/index.mdx
+++ b/website/newsletter/171/index.mdx
@@ -62,7 +62,7 @@ A playground with a quite exhaustive list of interactive demos about Next.js fea
 - 📜 [The Query Options API](https://tkdodo.eu/blog/the-query-options-api): Dominik explains the advantages of removing React-Query overloads in v5, and using a single unified options object that you can reuse across all React-Query APIs thanks to TypeScript duck typing. The usage of a fancy TypeScript DataTag technique greatly improves the DX 🙉.
 - 📜 [Panda v1 Roadmap](https://www.adebayosegun.com/blog/panda-v1-roadmap): the CSS-in-JS lib is progressing toward a v1 release. It has already optimized its runtime and integrated Lightning CSS. Remaining tasks include Panda Studio (to vizualize design tokens), opacity modifiers, container queries, config validation…
 - 📜 [Wrangling Tuple Types](https://kyleshevlin.com/wrangling-tuple-types/): Explains why you might want to use TypeScript “as const” while returning tuples from custom React hooks.
-- 📜 [Build a Next.js app in Storybook with React Server Components and Mock Service Worker](https://storybook.js.org/blog/build-a-nextjs-app-with-rsc-msw-storybook/): The RSC support coming with Storybook 8 permits to use it to develop a full Next.js app in isolation.
+- 📜 [Build a Next.js app in Storybook with React Server Components and Mock Service Worker](https://storybook.js.org/blog/build-a-nextjs-app-with-rsc-msw-storybook/): The RSC support coming with Storybook 8 permits to develop a full Next.js app in isolation.
 - 📜 [Build an app with Remix and Bun](https://sergiodxa.com/tutorials/build-an-app-with-remix-and-bun): It’s possible to use Bun at runtime, but for now you have to keep building the Remix app with Node.
 - 📜 [Harmony - A new kind of color picker for React](https://polar.sh/emilwidlund/posts/a-new-kind-of-color-picker-with-react-typescript): New fancy React color picker package, that matches multiple colors together according to harmonies.
 - 📜 [RSC is React Server + Component](https://bobaekang.com/blog/rsc-is-react-server-plus-component/): Gives you an interesting mental model to understand RSCs.
@@ -123,7 +123,7 @@ Expo SDK 50 introduces Expo Dev Tools Plugins, comes with new SQLite and Camera 
 
 **[Expo Router v3](https://expo.dev/changelog/2024/01-23-router-3)**
 
-Along with Expo SDK 50, Expo Router v3 has been released. It brings lots of performance and stability improvements and comes with better docs. Most notably, there is now experimental support for building universal server endpoints with API Routes.
+Along with Expo SDK 50, Expo Router v3 has been released. It brings lots of performance and stability improvements and comes with better docs. Most notably, there is now experimental support for building universal server endpoints with API Routes. Expo Router is now the very first universal, full-stack React framework!
 
 ---
 
