--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/171/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/171/index.mdx
@@ -2,7 +2,7 @@
 slug: /171
 title: "React Hebdo #171: ..."
 authors: [slorber]
-date: 01-24-2023
+date: 01-24-2024
 unlisted: true
 ---
 
@@ -34,12 +34,9 @@ import Support from "../_support.mdx";
 
 😴 Sleep peacefully knowing that Axiom’s zero-config observability for Vercel projects has you covered.
 
-*   Use Axiom's pre-built dashboard for an overview across all your Vercel logs and vitals, drill down to specific projects and deployments, and get insight on how functions are performing with a single click. 
-    
-*   [next-axiom](https://github.com/axiomhq/next-axiom) allows you to send logs and events from any part of your Next.js projects - client, edge, or server-side - without any special configuration.
-    
-*   Easily send structured logs directly from your code and analyze them together with Vercel logs.
-    
+- Use Axiom's pre-built dashboard for an overview across all your Vercel logs and vitals, drill down to specific projects and deployments, and get insight on how functions are performing with a single click.
+- [next-axiom](https://github.com/axiomhq/next-axiom) allows you to send logs and events from any part of your Next.js projects - client, edge, or server-side - without any special configuration.
+- Easily send structured logs directly from your code and analyze them together with Vercel logs.
 
 Axiom efficiently captures 100% of your event data so you’ll never have to worry about sampling or retention, and you’ll never have to guess what your users are experiencing.
 
@@ -65,20 +62,13 @@ Axiom efficiently captures 100% of your event data so you’ll never have to wor
 
 A complete form solution for React projects, used by Fortune 500 companies. With easy-to-use open-source components for building and running powerful forms inside your React app. Extensively documented, up in minutes, and deeply customizable.
 
-*   Builder for creating powerful forms;
-    
-*   Runner for deploying forms and collecting data;
-    
-*   Flexible form layouts (conversational, chat etc.) and styling;
-    
-*   Extensible with custom question types;
-    
-*   Complete docs, examples, and demos;
-    
-*   Self-hosted without external dependencies;
-    
-*   Start, test, and perfect for free.
-    
+- Builder for creating powerful forms;
+- Runner for deploying forms and collecting data;
+- Flexible form layouts (conversational, chat etc.) and styling;
+- Extensible with custom question types;
+- Complete docs, examples, and demos;
+- Self-hosted without external dependencies;
+- Start, test, and perfect for free.
 
 TWIR exclusive: [Get 25% off your FormBuilder SDK license](https://tripetto.com/sdk/this-week-in-react/?utm_source=thisweekinreact&utm_medium=sponsor&utm_campaign=sdk).
 
