--- a/website/newsletter/171/index.mdx
+++ b/website/newsletter/171/index.mdx
@@ -109,7 +109,7 @@ TWIR exclusive: [Get 25% off your FormBuilder SDK license](https://tripetto.com/
 
 ## 📱 React-Native {#react-native}
 
-This week’s React Native news are compiled by Benedikt. Feedback, suggestions or news to share? Let me know on [Twitter](https://twitter.com/bndkt).
+This week’s React Native news is compiled by Benedikt. Feedback, suggestions or news to share? Let me know on [Twitter](https://twitter.com/bndkt).
 
 [![Expo SDK 50](/emails/issues/171/expo50.jpg)](https://expo.dev/changelog/2024/01-18-sdk-50k)
 
