--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/171/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/171/index.mdx
@@ -1,18 +1,17 @@
 ---
 slug: /171
-title: "React Hebdo #171: ..."
+title: "React Hebdo #171: Expo, React Conf, React 19 preview, Next.js, React-Email, Storybook, Panda, Nexar, React-Query, TypeScript, Vocs, Skottie, Harmony, VisionOS..."
 authors: [slorber]
 date: 01-24-2024
-unlisted: true
 ---
 
 Salut à tous !
 
-<Todo />
+Cette semaine, la conférence officielle React a été annoncée. Co-organisée avec Callstack, React Native sera bien couvert ! React 19 arrive, et nous continuons à avoir une preview des fonctionnalités à venir comme le support des Web Components. Je ne serais pas surpris de le voir sortir pendant la conf, aux côtés de React Forget 🤞.
 
-📅 Conférence React Paris - 22 Mars: nouvelle conférence, les speakers ont déjà été annoncés.
+Par ailleurs, nous avons beaucoup d'articles et de releases intéressantes, notamment Next.js, React-Emails, Vocs...
 
-📅 React Connection - 22 Avril + React-Native Connection - 23 Avril: 2 jours de conférence web et mobile. CFP est ouvert jusqu'au 3 février.
+Le monde React Native s'est réveillé avec le SDL 50 d'Expo, et Expo Router v3 qui devient le tout premier framework React universel full-stack.
 
 <!-- truncate -->
 
@@ -46,9 +45,43 @@ Axiom efficiently captures 100% of your event data so you’ll never have to wor
 
 ## ⚛️ React {#react}
 
-<Todo />
+[![Next.js App Router Training](/emails/issues/171/appRouterTraining.jpg)](https://nextjs-app-router-training.vercel.app/)
 
--💸 [Accelerate your workflow with MightyMeld, a visual dev tool for React codebases. Drag, drop, click, and prompt your UI into place while you hand-code the rest of it.](https://www.mightymeld.com/?utm_source=thisweekinreact4&utm_medium=newsletter&utm_campaign=1&utm_content=top)
+**[Next.js App Router Training](https://nextjs-app-router-training.vercel.app/)**
+
+Un playground avec une liste assez exhaustive de démos interactives présentant les fonctionnalités de Next.js. Une excellente ressource pour comprendre le comportement de Next.js App Router en le voyant fonctionner, avec un moyen pratique de parcourir le code associé.
+
+---
+
+- 💸 [Accelerate your workflow with MightyMeld, a visual dev tool for React codebases. Drag, drop, click, and prompt your UI into place while you hand-code the rest of it.](https://www.mightymeld.com/?utm_source=thisweekinreact4&utm_medium=newsletter&utm_campaign=1&utm_content=top)
+- 📅 [React Conf 2024:](https://conf.react.dev/): la conférence officielle est de retour les 15 et 16 mai à Henderson (Nevada/USA), en collaboration avec Callstack.
+- 👀 [React core - Web Components / custom element support is ready for React 19](https://github.com/facebook/react/issues/11347#issuecomment-1899140345)
+- 👀 [Nexar: application architecture for Next.js App Router apps](https://nexar.dev/): Un ensemble de patterns et conventions pour construire des applications Next.js scalables, y compris une application open-source complète à étudier.
+- 🐦 [React-Forget is written in TypeScript/Babel. It will eventually be rewritten in Rust later, or compiled to native with Static Hermes!](https://twitter.com/dan_abramov2/status/1747640983980806466) 🙉
+- 📜 [New client-side hooks coming to React 19](https://marmelab.com/blog/2024/01/23/react-19-new-hooks.html): vue d'ensemble des nouveaux hooks et API de React qui arriveront dans la prochaine version majeure, et que vous pourrez utiliser sans framework ni SSR.
+- 📜 [The Query Options API](https://tkdodo.eu/blog/the-query-options-api): Dominik explique les avantages de la suppression des overloads TypeScript dans React-Query v5, et de l'utilisation d'un seul objet d'options unifié que vous pouvez réutiliser dans toutes les API React-Query grâce au duck typing de TypeScript. Montre l'utilisation d'une technique TypeScript avancée (DataTag, branded type) qui améliore considérablement le DX 🙉.
+- 📜 [Panda v1 Roadmap](https://www.adebayosegun.com/blog/panda-v1-roadmap): la librairie CSS-in-JS progresse vers une version v1. Elle a déjà optimisé sonruntime et intégré Lightning CSS. Les tâches restantes incluent Panda Studio (pour visualiser les design tokens), les modificateurs d'opacité, les container queries, la validation de la configuration...
+- 📜 [Wrangling Tuple Types](https://kyleshevlin.com/wrangling-tuple-types/): explique pourquoi vous pourriez vouloir utiliser TypeScript "as const" en retournant des tuples dans vos hooks customs React.
+- 📜 [Build a Next.js app in Storybook with React Server Components and Mock Service Worker](https://storybook.js.org/blog/build-a-nextjs-app-with-rsc-msw-storybook/): le support RSC fourni de Storybook 8 permettra de développer une application Next.js complète de manière isolée.
+- 📜 [Build an app with Remix and Bun](https://sergiodxa.com/tutorials/build-an-app-with-remix-and-bun): il est possible d'utiliser Bun au runtime, mais pour l'instant vous devrez continuer à builder l'app Remix avec Node.
+- 📜 [Harmony - A new kind of color picker for React](https://polar.sh/emilwidlund/posts/a-new-kind-of-color-picker-with-react-typescript): nouveau package original de color picker en React, qui associe plusieurs couleurs selon des harmonies.
+- 📜 [RSC is React Server + Component](https://bobaekang.com/blog/rsc-is-react-server-plus-component/): un modèle mental intéressant pour comprendre les CSR.
+- 📜 [From Next.js to Rails then Elixir: My journey through React.js burnout](https://dev.to/danielbergholz/from-nextjs-to-rails-then-elixir-my-journey-through-reactjs-burnout-h8d)
+- 📜 [Detailed React. Reconciliation, Renderers, Fiber, Virtual Tree](https://blog.frontend-almanac.com/JqtGelofzm1)
+- 📜 [Shining a light on Caustics with Shaders and React Three Fiber](https://blog.maximeheckel.com/posts/caustics-in-webgl/)
+- 📜 [Mastering React and OpenLayers Integration: A Comprehensive Guide](https://mxd.codes/articles/how-to-create-a-web-map-with-open-layers-and-react)
+- 📜 [Optimizing images for Next.js sites with imgproxy and docker](https://mxd.codes/articles/optimizing-images-for-next-js-sites-with-imgproxy-and-docker)
+- 📦 [dream-css-tool - styled-components, but without a client runtime. Built for Next.js](https://github.com/joshwcomeau/dream-css-tool): Josh Comeau explore la création de sa propre lib CSS-in-JS.
+- 📦 [React Email 2.0 - New preview experience, improved performance, CodeBlock component](https://resend.com/blog/react-email-2)…
+- 📦 [Next.js 14.1 - Improving DX, Turbopack, self-hosting, history APIs, image component, parallel and intercepted routes…](https://nextjs.org/blog/next-14-1)
+- 📦 [Zustand 4.5 - getInitialState to prevent hydration mismatches](https://github.com/pmndrs/zustand/releases/tag/v4.5.0)
+- 📦 [Relay 16.2 - @preloadable directive](https://github.com/facebook/relay/releases/tag/v16.2.0)
+- 📦 [Astro 4.2 - Prerendering using Speculation Rules API, customizable image optimization](https://astro.build/blog/astro-420/)…
+- 📦 [vocs - Minimal Documentation Framework, powered by React + Vite](https://github.com/wevm/vocs)
+- 📦 [ReScript 11.0 - React lazy components](https://rescript-lang.org/blog/release-11-0-0)
+- 🎥 [Lee Robinson - Next.js App Router Caching: Explained!](https://www.youtube.com/watch?v=VBlSe8tvg4U)
+- 🎥 [Lee Robinson - Deploying Next.js to Vercel](https://www.youtube.com/watch?v=AiiGjB2AxqA)
+- 🎥 [Ben Holmes - React form validation explained - Next.js and Astro](https://www.youtube.com/watch?v=DwEkvie79xI)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -76,32 +109,70 @@ TWIR exclusive: [Get 25% off your FormBuilder SDK license](https://tripetto.com/
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+Les actualités React Native de cette semaine sont compilées par Benedikt. Vous avez des commentaires, des suggestions ou des nouvelles à partager ? Faites-lui savoir sur [Twitter](https://twitter.com/bndkt).
 
--💸 [Moropo - Power Up Your Mobile UI Tests with support for 2FA, Google Play, Offline Mode and Tablets ](https://www.moropo.com?utm_source=newsletter&utm_medium=emails&utm_campaign=twir-20240124)
+[![Expo SDK 50](/emails/issues/171/expo50.jpg)](https://expo.dev/changelog/2024/01-18-sdk-50k)
+
+**[Expo SDK 50](https://expo.dev/changelog/2024/01-18-sdk-50)**
+
+Expo SDK 50 introduit les plugins Expo Dev Tools, vient avec de nouvelles API SQLite et Camera, et ajoute `@expo/fingerprint`, ainsi qu'une nouvelle façon de déterminer si une mise à jour du bundle JS est compatible avec un build natif donné. Cette version marque également la [fin du support de Webpack](https://blog.expo.dev/webpack-support-in-expo-cli-is-now-deprecated-e9831d7eb631) dans Expo, qui est maintenant déprécié en faveur de Metro. La meilleure manière de se familiariser avec Expo 50 est probablement de regarder Simon la parcourir en 15 minutes sur [YouTube](https://www.youtube.com/watch?v=shaGaiwu4Fg).
+
+---
+
+[![Expo Router v3](/emails/issues/171/router3.jpg)](https://expo.dev/changelog/2024/01-23-router-3)
+
+**[Expo Router v3](https://expo.dev/changelog/2024/01-23-router-3)**
+
+En même temps qu'Expo SDK 50, Expo Router v3 a été publié. Elle apporte de nombreuses améliorations en termes de performances et de stabilité, ainsi qu'une meilleure documentation. Plus particulièrement, il y a maintenant un support expérimental pour créer des endpoints serveurs universels avec API Routes. Expo Router est désormais le tout premier framework React full-stack universel !
+
+---
+
+- 💸 [Moropo - Power Up Your Mobile UI Tests with support for 2FA, Google Play, Offline Mode and Tablets ](https://www.moropo.com?utm_source=newsletter&utm_medium=emails&utm_campaign=twir-20240124)
+- 🐦 [Blur VisionOS demo](https://twitter.com/o_kwasniewski/status/1747976103505821946): `@react-native-community/blur` supporte maintenant visionOS.
+- 📖 [Expo Docs - Use Bun](https://docs.expo.dev/guides/using-bun/): Bun est (à juste titre) à la mode en ce moment et il fonctionne très bien avec Expo !
+- 📜 [Webpack support in Expo CLI is now deprecated](https://blog.expo.dev/webpack-support-in-expo-cli-is-now-deprecated-e9831d7eb631): Il est temps de passer à Metro, le bundler universel pour React Native et Expo Web. Il y a aussi une [doc pour migrer](https://docs.expo.dev/router/migrate/from-expo-webpack/).
+- 📜 [Xcode 15.2 image is now available on EAS Build](https://expo.dev/changelog/2024/01-18-eas-build-xcode-15.2-image)
+- 📜 [React Native Video on visionOS](https://thewidlarzgroup.com/react-native-video-on-visionos/): react-native-video sera capable d'effectuer un rendu vidéo sur Vision Pro d'Apple.
+- 📜 [Our React Native toolbox: 24 essential tools for developers in 2024](https://thewidlarzgroup.com/24-react-native-tools-for-2024/): Bonne vue d'ensemble du paysage des outils, des IDE au debugging et tracing.
+- 📜 [How to set video as a background in React Native application](https://thewidlarzgroup.com/video-background-with-react-native-video/)
+- 📦 [React Native Storybook v7 alpha](https://github.com/storybookjs/react-native/releases/tag/v7.6.10-alpha.0): désormais compatible avec la dernière version de Storybook 7.6.1, support des imports dynamiques.
+- 📦 [react-native-skottie - run Lottie animations using Skia's GPU-accelerated engine](https://github.com/margelo/react-native-skottie)
+- 📦 [nativecn-ui - An effort to port the popular shadcn-ui to React Native](https://github.com/Mobilecn-UI/nativecn-ui)
+- 📦 [react-native-fast-tflite 1.1 - Upgrades to latest TensorFlow Lite](https://github.com/mrousavy/react-native-fast-tflite/releases/tag/v1.1.0)
+- 🎙️ [RNR 285 - Expo Dominates the App Store (and other news)](https://reactnativeradio.com/episodes/rnr-285-expo-dominates-the-app-store-and-other-news)
+- 🎙️ [Rocket Ship 26 - React Server Components for React Native with Szymon Rybczak](https://podcast.galaxies.dev/episodes/026-react-server-components-for-react-native-with-szymon-rybczak)
+- 🎥 [William Candillon - 3D transformations with React Native Skia](https://www.youtube.com/watch?v=pYu3DiWYtL0)
+- 🎥 [Catalin Miron - create-expo-app -w with-router-tailwind](https://www.youtube.com/watch?v=RsFoOlYj-gc&themeRefresh=1)
+- 🎥 [Simon Grimm - The Worlds Best Apps use React Native](https://www.youtube.com/watch?v=LIMyd5FoKyc)
 
 ---
 
 ## 🇫🇷 En français {#fr}
 
-<Todo />
-
-💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
-
-<Todo />
+- 🎥 [Gérer un état global sur React avec Zustand](https://www.youtube.com/watch?v=a1k_TgmKQ5M)
+- 🎥 [Ils ont créé la meilleur librairie de Toast en React !](https://www.youtube.com/watch?v=K1lJyYLjZks)
+- 🎥 [Comment faire de la Veille Techno en tant que développeur](https://www.youtube.com/watch?v=4dekdBPTHkU)
+- 🎙️ [Les News Web Dev janvier 2024 - Next.js, React, CSS, Adonis…](https://double-slash.dev/podcasts/news24w3/)
+- 📅 [Conférence React Paris - 22 Mars](https://react.paris/): nouvelle conférence, les speakers ont déjà été annoncés.
+- 📅 [React Connection - 22 Avril](https://reactconnection.io/) + [React-Native Connection - 23 Avril](https://reactnativeconnection.io/): 2 jours de conférence web et mobile. CFP est ouvert jusqu'au 3 février.
 
 ---
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- 👀 [Biome RFC - Plugins](https://github.com/biomejs/biome/discussions/1649)
+- 📜 [How Core Web Vitals affect SEO - field data vs lab data](https://vercel.com/blog/how-core-web-vitals-affect-seo)
+- 📜 [The Bun Shell - run cross-platform shell scripts in JavaScript & TypeScript](https://bun.sh/blog/the-bun-shell)
+- 📜 [The AHA Stack - Combine Astro, htmx and Alpine.js to create modern web applications](https://ahastack.dev/)
+- 📜 [You Probably Don't Need eslint-config-prettier or eslint-plugin-prettier](https://www.joshuakgoldberg.com/blog/you-probably-dont-need-eslint-config-prettier-or-eslint-plugin-prettier)
+- 📜 [Migrating from Zod to Valibot: A Comparative Experience](https://mwskwong.com/blog/migrating-from-zod-to-valibot-a-comparative-experience)
+- 📦 [og-img - framework agnostic package for generating Open Graph images using Satori and resvg](https://github.com/fabian-hiller/og-img)
+- 📦 [Knip 4.0 - Find unused files, dependencies and exports in JavaScript and TypeScript projects](https://knip.dev/blog/knip-v4)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
-
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/171/meme.jpg)](https://twitter.com/trashh_dev/status/1750233852553924709)
 
 A plus 👋
