--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/171/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/171/index.mdx
@@ -7,11 +7,11 @@ date: 01-24-2024
 
 Salut à tous !
 
-Cette semaine, la conférence officielle React a été annoncée. Co-organisée avec Callstack, React Native sera bien couvert ! React 19 arrive, et nous continuons à avoir une preview des fonctionnalités à venir comme le support des Web Components. Je ne serais pas surpris de le voir sortir pendant la conf, aux côtés de React Forget 🤞.
+Cette semaine, la conférence officielle React a été annoncée. Co-organisée avec Callstack, React Native devrait être bien couvert ! React 19 arrive, et nous continuons à avoir une preview des fonctionnalités à venir comme le support des Web Components. Je ne serais pas surpris de le voir sortir pendant la conf, aux côtés de React Forget 🤞.
 
 Par ailleurs, nous avons beaucoup d'articles et de releases intéressantes, notamment Next.js, React-Emails, Vocs...
 
-Le monde React Native s'est réveillé avec le SDL 50 d'Expo, et Expo Router v3 qui devient le tout premier framework React universel full-stack.
+Le monde React Native s'est réveillé avec le SDK 50 d'Expo, et Expo Router v3 qui devient le tout premier framework React universel full-stack.
 
 <!-- truncate -->
 
