sponsor: ask for competitors and flexibility

--- a/website/src/pages/sponsor.mdx
+++ b/website/src/pages/sponsor.mdx
@@ -294,6 +294,11 @@ Alternatively, you can also provide us with all the information we need straight
 - email us at [sponsor@thisweekinreact.com](mailto:sponsor@thisweekinreact.com?subject=Sponsorship)
 - acknowledge receipt of our invoice
 
+**Useful additional information to provide**:
+
+- let us know if you have strict calendar constraints, such as a fixed-date event
+- give us a list of companies you don't want to advertise alongside in the same issue
+
 <details>
 
 <summary>We suggest using the following email template</summary>
@@ -314,7 +319,9 @@ Requested dates (dd/MM/yyyy):
 - 04/10/2022
 - 11/10/2022
 
-We are flexible for the dates: yes / no
+Additional information:
+- We are flexible for the dates: yes / no
+- List of competitors we do not want to advertise alongside: Company1, Company2...
 
 Company details for invoicing:
 - Company Name: ACME Corp
