sponsor: ask for competitors and flexibility

--- a/website/src/pages/sponsor.mdx
+++ b/website/src/pages/sponsor.mdx
@@ -321,7 +321,7 @@ Requested dates (dd/MM/yyyy):
 
 Additional information:
 - We are flexible for the dates: yes / no
-- List of competitors we do not want to advertise alongside: Company1, Company2...
+- List of competitors we do not want to advertise alongside in the same issue: Company1, Company2...
 
 Company details for invoicing:
 - Company Name: ACME Corp
