sponsor: ask for competitors and flexibility

--- a/website/src/pages/sponsor.mdx
+++ b/website/src/pages/sponsor.mdx
@@ -452,3 +452,20 @@ In case you don't want your company's name to appear in our public calendar, ple
     For these reasons, we strongly recommend to submit your ad copy on time, including ad updates.
 
 </details>
+
+<details>
+    <summary>
+        What happens if my ad gets scheduled the same day as a company I don't like, or a competitor?
+    </summary>
+
+    Our newsletter has multiple placements, and it is possible that your ad gets matched with another ad that does not please you.
+
+    We understand that you might not want to broadcast your ad the same newsletter as your competitors. In practice, we think it is not a big deal, and many paid marketing channels (such as Google search ads) display competitors already.
+
+    However, in case there are companies and competitors you absolutely don't want to advertise alongside, we kindly ask you to be proactive and provide us with an exhaustive list of companies you do not want to be matched with.
+
+    If you don't provide such a list when booking a slot, we will do our best to not match you with a competitor on a best-effort basis based on our intuition, but there will be no guarantee.
+
+    Please keep in mind that our sales/booking team doesn't always have perfect knowledge of who's competing with whom, and to what extent. You know better than us whose companies you don't want to be matched with.
+
+</details>
