--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/172/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/172/index.mdx
@@ -8,9 +8,7 @@ unlisted: true
 
 Salut à tous !
 
-*   📅 [Conférence React Paris - 22 Mars](https://react.paris/): nouvelle conférence, les speakers ont déjà été annoncés.
-    
-*   📅 [React Connection - 22 Avril](https://reactconnection.io/) + [React-Native Connection - 23 Avril](https://reactnativeconnection.io/): 2 jours de conférence web et mobile. CFP est ouvert jusqu'au 3 février.
+twitter account
 
 <Todo />
 
@@ -34,12 +32,9 @@ import Support from "../_support.mdx";
 
 😴 Sleep peacefully knowing that Axiom’s zero-config observability for Vercel projects has you covered.
 
-*   Use Axiom's pre-built dashboard for an overview across all your Vercel logs and vitals, drill down to specific projects and deployments, and get insight on how functions are performing with a single click. 
-    
-*   [next-axiom](https://github.com/axiomhq/next-axiom) allows you to send logs and events from any part of your Next.js projects - client, edge, or server-side - without any special configuration.
-    
-*   Easily send structured logs directly from your code and analyze them together with Vercel logs.
-    
+- Use Axiom's pre-built dashboard for an overview across all your Vercel logs and vitals, drill down to specific projects and deployments, and get insight on how functions are performing with a single click.
+- [next-axiom](https://github.com/axiomhq/next-axiom) allows you to send logs and events from any part of your Next.js projects - client, edge, or server-side - without any special configuration.
+- Easily send structured logs directly from your code and analyze them together with Vercel logs.
 
 Axiom efficiently captures 100% of your event data so you’ll never have to worry about sampling or retention, and you’ll never have to guess what your users are experiencing.
 
@@ -67,14 +62,10 @@ Clerk streamlines React app authentication and user management, ensuring a quick
 
 Experience the benefits of Clerk:
 
-*   💅 Pre-built UI components for sign-in, sign-up, user profiles, and organizations. Customize with any CSS library and deploy on your domain
-    
-*   📦 SDKs for React, React Native, Next.js, Redwood, Remix, and other frameworks
-    
-*   ⚡ Integrations with Firebase, Supabase, Convex, and other BaaS providers
-    
-*   🎁 User management, social login, magic links, MFA, and more out of the box
-    
+- 💅 Pre-built UI components for sign-in, sign-up, user profiles, and organizations. Customize with any CSS library and deploy on your domain
+- 📦 SDKs for React, React Native, Next.js, Redwood, Remix, and other frameworks
+- ⚡ Integrations with Firebase, Supabase, Convex, and other BaaS providers
+- 🎁 User management, social login, magic links, MFA, and more out of the box
 
 Dive into Clerk's [quickstarts and tutorials](https://clerk.com/docs/quickstarts/overview?utm_source=sponsorship&utm_medium=newsletter&utm_campaign=thisweekinreact&utm_term=01-31-24) to kickstart your project🚀
 
@@ -90,11 +81,11 @@ Dive into Clerk's [quickstarts and tutorials](https://clerk.com/docs/quickstarts
 
 ## 🇫🇷 En français {#fr}
 
-<Todo />
-
-💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
-
-<Todo />
+- 📜 [Drag and drop d'une liste avec la librairie dnd-kit et Next.js](https://www.devaidaya.fr/articles/drag-and-drop-dune-liste-avec-la-librairie-dnd-kit-et-next.js)
+- 🎥 [React Testing playlist](https://www.youtube.com/watch?v=tGTKo0d0wvk&list=PLVq2Nd186wZEdJ06rR5O93F3_0P67TP3x&pp=iAQB) + [Next.js Testing playlist](https://www.youtube.com/watch?v=4impiruEMn8&list=PLVq2Nd186wZEDShrxPWZkamTCWorK5gLx&pp=iAQB)
+- 🎥 [Actus JS de la semaine - React Email v2.0 & Bun cross-os shell](https://www.youtube.com/watch?v=xpu-zJ3UvhU)
+- 📅 [Conférence React Paris - 22 Mars](https://react.paris/): nouvelle conférence, les speakers ont déjà été annoncés.
+- 📅 [React Connection - 22 Avril](https://reactconnection.io/) + [React-Native Connection - 23 Avril](https://reactnativeconnection.io/): 2 jours de conférence web et mobile. CFP est ouvert jusqu'au 3 février.
 
 ---
 
