--- a/website/newsletter/172/index.mdx
+++ b/website/newsletter/172/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /172
-title: "This Week In React #172: Next.js, PPR, Remotion, State of React Native, Panda, StyleX, Cosmos, Remix, TypeScript, Skia, Reanimated, RNTL, Storybook, Flashlight, Tamagui..."
+title: "This Week In React #172: Next.js, PPR, Remotion, State of React Native, Parcel, Panda, StyleX, Cosmos, Remix, RTK, TypeScript, Skia, Reanimated, RNTL, Storybook, Flashlight, Tamagui..."
 authors: [slorber]
 date: 01-31-2024
 unlisted: true
@@ -118,15 +118,10 @@ This section is now co-authored with [Benedikt](https://twitter.com/bndkt). Feel
 I’m a big fan of all the “State of …” surveys, because they give us a unique insight into what’s going on in the ecosystem. It’s one thing to follow the hype generated on X and elsewhere, but another thing to see stats of what developers actually use. So I’m really happy to see last year’s State of React Native results published! And as this is now the second year this survey is conducted, we can also identify some trends by comparing the results to the year before. For all the details, [have a look at the results yourself](https://results.stateofreactnative.com/)! I’ll just highlight a few things that I found interesting, some of them really surprised me:
 
 - State management continues to be in a very interesting state (pun intended), with Redux taking the last place in retention with only 44 % (down from 57 % last year), but still clinging to second place after React’s native capabilities in terms of usage with 78 % (down from 85 %).
-
 - Data fetching is a category where the results are in line with the amount of attention that can be observed on social media, with TanStack Query and tRPC taking top places in terms of interest and retention, and Meta’s own Relay staying mostly irrelevant outside of Meta with only 5 % usage.
-
 - The future of navigation is Expo Router, which exploded from 12 % usage last year to 40 % today.
-
 - Gauging by social media activity, styling seems to be the most talked about category with an abundance of options. In terms of usage, the classics (StyleSheet API, inline styling, styled components) remain the dominant options, with NativeWind and Tamagui catching up. Tamagui managed to generate the most interest in the past year (and also has the most retention and interest as a UI component library), closely followed by a new contender: react-native-unistyles.
-
 - Special shoutout to Expo: In the “React Native tools” section, 6 out of the top 10 tools as well as the top 2 options in the deployment category are made by Expo.
-
 - Over 85 % of respondents think that React Native is moving in the right direction and the share of developers that find that building RN apps is overly complex right now decreased from about 30 % to 25 % - that’s still too much, but we seem to be moving in the right direction!
 
 Overall, really interesting results that are worth [checking out](https://results.stateofreactnative.com/) in detail! Many thanks to Bartłomiej, Kacper and Software Mansion for making this happen!
